2002-03-14 Terry Biggs <tbiggs@users.sourceforge.net>

	* adding a new bookmark group now adds a menu item to
	  the add bookmark menus.
	* fixed the detached interlinear not changing modules bug
	* setup druid now shows correct gnomesword version number
	* notebook tab menus now display last item correctly.
	* added find dialog that can be used outside of html editor
	* added files gs_find_dlg.c and gs_find_dlg.h


2002-03-11 Jan Paul Schmidt <japas.@users.sourceforge.net>

	* added German translation

2002-03-06 Terry Biggs <tbiggs@users.sourceforge.net>

	* added notebook to lower pane area (lex/dict).
	* added Dict/Lex, GBS and Interlinear page to notebook
	* removed gs_gbs.* - all gbs code is in sw_gbs.*
	* removed editor functions from gbs - will add back later.


2002-03-01 Terry Biggs <tbiggs@users.sourceforge.net>

	* added gs_editor_search.* (from GtkHTML editor)
	

2002-02-23 Terry Biggs <tbiggs@users.sourceforge.net>

	* changed sw_gnomesword.* to sw_sword.*
	* changed gs_information_sw.* sw_information_dlg.*
	* changed gs_html_editor.* to gs_editor.*
	* added gs_gbs.* and sw_gbs.*
	* added gs_getinfo_dlg.*


2002-02-19 Terry Biggs <tbiggs@users.sourceforge.net>

	* one more time - change look of search results - removed preview 
	  of verses - it was to slow.	  
	  

2002-02-15 Terry Biggs <tbiggs@users.sourceforge.net>

	* made interlinear page undockable
	* when int page is undocked it displays a chapter at 
	 a time with the mods side by side in an html table 
	 like BibleTime.
	* added gs_undock_int.* and gs_undock_sb.*

2002-02-02 Terry Biggs <tbiggs@users.sourceforge.net>

	* added editor to gbs
	* made shortcut bar dockable
	

2002-02-01 Terry Biggs <tbiggs@users.sourceforge.net>

	* removed autosave option for personal comments editor (tmp??)


2002-01-31 Terry Biggs <tbiggs@users.sourceforge.net>

	* added some GBS support
	* added book viewer to main notebook w/ commentaries, note editor,
	  Interlinear page and studypad.